--- a/variations/index.html
+++ b/variations/index.html
@@ -28,7 +28,7 @@
 
     <h2>
 
-<A HREF="variations/level1a.html"> Level 1 A </A>
+<A href="variations/level1a.html"> Level 1 A </A>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;55555555555555555555555555555555555555555
 </h2>
 
