--- a/meditate/index2.html
+++ b/meditate/index2.html
@@ -27,7 +27,7 @@
 <div class="JustBreathe">
   Just Breathe
 </div>
-<a href="howtoguide.html">how to guide</a>
+<a href="howtoguide.html">Meditation guide for beginners</a>
 </div>
 
 <div class="guy">
